Fix pod view double scrollbars

--- a/styles/atom-perl6-editor-tools.less
+++ b/styles/atom-perl6-editor-tools.less
@@ -7,7 +7,6 @@
 
 .atom-perl6-editor-tools {
   background-color: @syntax-background-color;
-  overflow: scroll;
   box-sizing: border-box;
   padding: 0;
 
